objects/n2de__cls_Match_object__c.object
<CustomObject>
    <fields>
        <fullName>n2de__Match_filter_soql__c</fullName>
        <description>The SOQL filter to use to limit the records returned from matching</description>
        <label>Match filter SOQL</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Match_filter_ui_config__c</fullName>
        <description>The UI config for the filter to use to limit the records returned from matching</description>
        <label>Match filter ui config</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>n2de__Match_multiple_order__c</fullName>
        <description>How to sort when there are multiple record matches</description>
        <label>Record sort multiple matches</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Classifier matching object</label>
    <listViews>
        <fullName>Nolan_Daigle_cls_Match_object</fullName>
        <filterScope>Queue</filterScope>
        <label>Nolan Daigle</label>
        <queue>Nolan_Daigle</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>sObject Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Classifier matching objects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>